# hadr-claw

./: .commit_msg  .dockerignore  .env.example  .git-commit-msg  .gitignore  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  dashboard.html  docker-compose.yml  goal.md  implementation-notes.md  problem_statement.md  pyproject.toml
.github/workflows/: ci.yml  heartbeat.yml
agent/: harness.py  model.py  morning.py  soul.md  telemetry.py  tools.py
docs/solutions/: 2026-07-08-git-clean-ate-the-loop.md  2026-07-08-tool-json-truncated-by-max-tokens.md  2026-07-08-usage-limit-burned-the-loop.md  2026-07-08-zen-gateway-models.md
feeds/: gdacs.md  reliefweb.md  usgs.md
hadr/: __init__.py  __main__.py  dedupe.py  events.py  memory.py  render.py  runlog.py
hadr/feeds/: gdacs.py  reliefweb.py  usgs.py
ops/: crontab
pages/: architecture.html  marketing.html
scripts/: README.md  check_dashboard.py  check_dedup.py  check_freshness.py  check_memory.py  check_schema.py  check_spend.py  overnight.sh  run_checkers.py
skills/: README.md
state/: last_run.json  seen_events.json
state/runs/: 20260708T031801Z.json  20260708T031816Z.json  20260708T031917Z.json  20260708T031935Z.json  20260708T032619Z.json  20260708T032655Z.json  20260708T032738Z.json  20260708T032752Z.json  20260708T032927Z.json  20260708T033324Z.json  20260708T033332Z.json  20260708T035312Z.json  20260708T044326Z.json  (+20 more)
tests/: test_dedupe.py  test_degraded_payloads.py  test_gdacs.py  test_harness.py  test_memory.py  test_morning.py  test_reliefweb.py  test_render.py  test_run_records.py  test_usgs.py
(+23 files in other folders)
